add header componanet

--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portofolio</title>
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <div class="logo-name">
+            <a href="./index.html"><img src="./images/developer.png" alt="Software developer logo" width="100px" height="100px"></a>
+            <p class="name">
+                <span class="coder-text">Emil</span> 
+                <span class="academy-text">Megalla</span>
+            </p>
+        </div>
+
+        <nav class="nav-items">
+            <a href="./html/about.html" target="_blank">About</a>
+            <a href="./html/service.html" target="_blank">Services</a>
+            <a href="./html/contact.html" target="_blank">Contact</a>
+        </nav>
+        <div class=""></div>
+    </header>
     <main></main>
     <footer></footer>
 </body>
