created footer component

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My Portofolio</title>
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="./css/style.css">
+    <!--Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
 </head>
 <body>
     <header>
@@ -26,6 +29,18 @@
         <div class=""></div>
     </header>
     <main></main>
-    <footer></footer>
+
+    <footer>
+        <div class="social-media">
+            <a href=""><i class="fa-brands fa-github"></i></a>
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-solid fa-blog"></i></a>
+        </div>
+
+        <div class="info">
+            <p>Contact: 0404040404</p>
+            <p>Address: 1 Street st Subrub</p>
+        </div>
+    </footer>            
 </body>
 </html>
