finished home page

--- a/index.html
+++ b/index.html
@@ -1,46 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portofolio</title>
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
     <!--Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <header>
-        <div class="logo-name">
-            <a href="./index.html"><img src="./images/developer.png" alt="Software developer logo" width="100px" height="100px"></a>
-            <p class="name">
-                <span class="coder-text">Emil</span> 
-                <span class="academy-text">Megalla</span>
-            </p>
+      <div class="logo-name">
+        <a href="./index.html"
+          ><img
+            src="./images/developer.png"
+            alt="Software developer logo"
+            width="100px"
+            height="100px"
+        /></a>
+        <p class="name">
+          <span class="coder-text">Emil</span>
+          <span class="academy-text">Megalla</span>
+        </p>
+      </div>
+
+      <nav class="nav-items">
+        <a href="./html/about.html" target="_blank">About</a>
+        <a href="./html/service.html" target="_blank">Services</a>
+        <a href="./html/contact.html" target="_blank">Contact</a>
+      </nav>
+      <div class=""></div>
+    </header>
+
+    <main>
+      <section>
+        <div class="jumbotrin">
+          <img src="./images/jumbotron.jpg" alt="" />
         </div>
 
-        <nav class="nav-items">
-            <a href="./html/about.html" target="_blank">About</a>
-            <a href="./html/service.html" target="_blank">Services</a>
-            <a href="./html/contact.html" target="_blank">Contact</a>
-        </nav>
-        <div class=""></div>
-    </header>
-    <main></main>
+        <div class="details">
+          <p>
+            Serve your degital needas Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Facere maxime natus ad dicta inventore. Hic
+            debitis aliquid provident facilis quas nisi cumque, molestiae quae
+            amet. Dolorum minus quibusdam a eos. Lorem ipsum dolor sit, amet
+            consectetur adipisicing elit. Nesciunt atque laborum reprehenderit
+            facere placeat nisi doloribus autem, suscipit itaque consequuntur
+            quidem perferendis labore velit vel, modi doloremque soluta aliquam
+            totam? Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+            Non, ab cum quam odio porro eum architecto, doloribus blanditiis
+            perspiciatis provident iusto, corrupti veritatis. Nemo, distinctio
+            quibusdam? Voluptas asperiores ipsum sequi. Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit. Cumque fugiat eligendi vel dicta
+            magnam veritatis omnis? Possimus distinctio magnam quia, recusandae
+            aperiam, neque repellat quidem facere, suscipit natus esse
+            provident. Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            In dolorem sint itaque reprehenderit omnis, sequi, expedita deserunt
+            impedit ab eligendi quis perferendis non. Vero tenetur dicta optio
+            eos, quia corporis. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Reiciendis quaerat nihil vero, culpa laudantium
+            cum ad itaque hic illum. Corrupti unde quas sed explicabo!
+            Repudiandae adipisci pariatur laborum incidunt ipsam?
+          </p>
+        </div>
+      </section>
+    </main>
 
     <footer>
-        <div class="social-media">
-            <a href=""><i class="fa-brands fa-github"></i></a>
-            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-            <a href=""><i class="fa-solid fa-blog"></i></a>
-        </div>
+      <div class="social-media">
+        <a href=""><i class="fa-brands fa-github"></i></a>
+        <a href=""><i class="fa-brands fa-linkedin"></i></a>
+        <a href=""><i class="fa-solid fa-blog"></i></a>
+      </div>
 
-        <div class="info">
-            <p>Contact: 0404040404</p>
-            <p>Address: 1 Street st Subrub</p>
-        </div>
-    </footer>            
-</body>
+      <div class="info">
+        <p>Contact: 0404040404</p>
+        <p>Address: 1 Street st Subrub</p>
+      </div>
+    </footer>
+  </body>
 </html>
