--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Portofolio</title>
     <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href=".css/pages/home.css">
     <!--Font Awesome -->
     <link
       rel="stylesheet"
@@ -76,9 +77,9 @@
 
     <footer>
       <div class="social-media">
-        <a href=""><i class="fa-brands fa-github"></i></a>
-        <a href=""><i class="fa-brands fa-linkedin"></i></a>
-        <a href=""><i class="fa-solid fa-blog"></i></a>
+        <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/emil-megalla-40a224123/"  target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.joshwcomeau.com/"  target="_blank"><i class="fa-solid fa-blog"></i></a>
       </div>
 
       <div class="info">
