create services html page

--- a/html/service.html
+++ b/html/service.html
@@ -1,12 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Services</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portofolio</title>
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/pages/services.css">
+    <!--Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <header>
+      <div class="logo-name">
+        <a href="../index.html"
+          ><img
+            src="../images/developer.png"
+            alt="Software developer logo"
+            width="100px"
+            height="100px"
+        /></a>
+        <p class="name">
+          <span class="coder-text">Emil</span>
+          <span class="academy-text">Megalla</span>
+        </p>
+      </div>
+
+      <nav class="nav-items">
+        <a href="./about.html" target="_blank">About</a>
+        <a href="./service.html" target="_blank">Services</a>
+        <a href="./contact.html" target="_blank">Contact</a>
+      </nav>
+      <div class=""></div>
+    </header>
+
+    <main>
+         <article>
+            <section>
+                <img class="service-image" src="../images/webDevelopment.jpg" alt="Web development">
+            </section>
+
+            <section>
+                <h3>Web development</h3>
+            </section>
+        </article>
+
+         <article>
+            <section>
+                <img src="" alt="">
+            </section>
+                
+            <section>
+                <h3>Web designing</h3>
+            </section>
+         </article>
+
+         <article>
+            <section>
+                <img src="" alt="">
+            </section>
+
+            <section>
+                <h3>Systems Security</h3>
+            </section>
+         </article>
+    </main>
+
+    <footer>
+      <div class="social-media">
+        <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/emil-megalla-40a224123/"  target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.joshwcomeau.com/"  target="_blank"><i class="fa-solid fa-blog"></i></a>
+      </div>
+
+      <div class="info">
+        <p>Contact: 0404040404</p>
+        <p>Address: 1 Street st Subrub</p>
+      </div>
+    </footer>
+  </body>
 </html>
